...
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitle"
        android:layout_width="411dp"
        android:layout_height="280dp"
        app:layout_constraintBottom_toTopOf="@+id/lytForms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lytSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="175dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="175dp"
                android:layout_marginBottom="40dp"
                android:text="Sign In"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@+id/etSignInEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etSignInEmail"
...
                android:autofillHints=""
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/etSignInPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignIn" />

            <EditText
                android:id="@+id/etSignInPassword"
...
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/textHint"
                app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSignInEmail" />

            <Button
                android:id="@+id/btnSignIn"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            <ImageButton
                android:id="@+id/btnResetPasswordForm"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/ic_question_mark"
                android:visibility="visible"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etResetEmail"
                style="@style/EditTextTheme"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="292dp"
...
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@+id/etResetEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="161dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="162dp"
                android:text="Reset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etResetEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

...
