<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_create"
        android:title="Create Profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_create"
        android:title="Edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="Settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:title="Sign Out"
        app:showAsAction="never"
        />
</menu>