<resources>
    <string name="action_menu_collections_search">Search</string>
    <string name="action_menu_collections_filter">Filter</string>
    <string name="action_menu_collections_sort">sort</string>

    <string name="fragment_title_analytics">Analytics</string>
    <string name="fragment_title_create">Create</string>
    <string name="fragment_title_collections">Collections</string>
    <string name="fragment_title_history">History</string>
    <string name="fragment_title_profile">Profile</string>


    <string name="btnScan">Scan</string>
    <string name="btnGen">Generate</string>
    <string name="btnHome">Home</string>
    <string name="qrImage">qrImage</string>
    <string name="qrInput">Input</string>
    <string name="btnSave">Save</string>

    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="barcode_reader">QrCode Reader</string>
    <string name="scanned_qr_code_result">Scanned Qr Code result</string>
    <string name="uID">User ID</string>
    <string name="cID">Card ID</string>

    <!-- Temporary Strings for Displayed Scanned Cards -->
    <string name="c_name">Name: </string>
    <string name="c_company">Company: </string>
    <string name="c_university">University: </string>
    <string name="c_major">Major: </string>
    <string name="c_position">Position: </string>

    <string name="app_name">MyFair</string>
    <string name="profile_Creation">Profile Creation</string>
    <string name="back">Back</string>
    <string name="btnUpdate">Update</string>
    <string name="typeEntry">Enter user type</string>
    <string name="fnameEntry">First name</string>
    <string name="lnameEntry">Last name</string>
    <string name="name_entry">Enter Your Name</string>
    <string name="usernameEntry">Choose a Username</string>
    <string name="title_myCollections">My Collections</string>
    <string name="title_receivedCollections">Received Collections</string>
    <string name="myCards">User Library</string>
    <string name="title_newCard">New Card</string>
    <string name="title_UserLib">My Cards</string>
    <string name="companyCard">Business Card</string>
    <string name="studentCard">Student Card</string>
    <string name="EnterName">Name On Card</string>
    <string name="EnterCompany">Company Name</string>
    <string name="Position">Position</string>
    <string name="done">Done</string>
    <string name="UniversityName">University Name</string>
    <string name="Major">Major</string>

    <string name="collectionItemDefaultName">Null name</string>
    <string name="collectionItemIconDescription">Collection Icon</string>
    <string name="collectionItemMoreInfo">More Information</string>
    <string name="analyticsYourCards">Your Cards</string>
    <string name="analyticsScannedBtn">Scanned Cards</string>
    <string name="historyBtn">History</string>
    <string name="graphsBtn">Graphs</string>
    <string name="analyticsGraphs">Graphs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="graphTitle">Card Scans</string>
    <string name="totalScansTitle">Total Scans</string>
    <string name="totalNumberOfScans">Total Scans</string>
    <string name="fromText">From</string>
    <string name="toText">To</string>
    <string name="dateCreatedText">Created:</string>

</resources>
