<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/fragment_title_profile" />
    <item
        android:id="@+id/navigation_collections"
        android:icon="@drawable/ic_collections"
        android:title="@string/fragment_title_collections" />
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create"
        android:title="@string/fragment_title_create" />
    <item
        android:id="@+id/navigation_analytics"
        android:icon="@drawable/ic_analytics"
        android:title="@string/fragment_title_analytics" />
</menu>